testsuite/tests/typecheck/should_fail/T7697.stderr

T7697.hs:3:6: error:
    • Expected a constraint, but ‘Int’ is a type
    • In the type signature: f :: Int => Int
